<resources>
    <string name="app_name">FoodFight</string>
    <string name="main_button01">MEALS</string>
    <string name="main_label01">Daily Goal</string>
    <string name="main_label02">Weekly Goal</string>


    <string name="add_custom_food_header">Add Some Special Foods</string>
    <string name="add_custom_food_placeholder">Someday there will be a all kinds of toys here.</string>


    <string name="add_food_header">Add Food</string>
    <string name="add_food_btn01">Add Custom Food</string>
    <string name="add_food_btn02">Search</string>
    <string name="add_food_etSearch">Enter Food Name Here</string>


    <string name="app_about_header">About the App</string>
    <string name="app_about_0">CS 246, Spring 2021, Team 18 Project</string>
    <string name="app_about_1">The Team</string>
    <string name="app_about_2">The App</string>
    <string name="app_about_3">"Tom Butler
Kemish Lloyd
Caleb Nwokocha
Cody Overholt
Kaleb Pulley
Phillip Proctor"
    </string>
    <string name="app_about_4">An easy to use calorie tracking app that will allow you to track
        and trend your daily calorie intake. Set goals to help achieve your desired weight.</string>


    <string name="calendar_header">Pick a Date</string>
    <string name="calendar_btn01">Set Date</string>
    <string name="calendar_label01">Select date below</string>


    <string name="food_item_header">How much did you eat?</string>
    <string name="food_item_btn01">ADD</string>
    <string name="food_item_label01">Food Name:</string>
    <string name="food_item_label02">calories per</string>
    <string name="food_item_label03">Servings eaten</string>

    <string name="food_name_header">Food Name:</string>
    <string name="qty_header">Qty:</string>
    <string name="serving_size_header">Serving Size:</string>
    <string name="serving_unit_header">Serving Unit:</string>
    <string name="total_calories_header">Total Calories:</string>
    <string name="manufacturer_header">Brand Name:</string>
    <string name="food_confirm">Confirm</string>
    <string name="food_cancel">Cancel</string>
    <string name="cals_header">Total Calories</string>


    <string name="food_list_header">What you\'ve eaten</string>
    <string name="food_list_label01">Selected Meal</string>
    <string name="food_list_label02">Total Meal Calories:</string>
    <string name="food_list_button01">Add Food</string>


    <string name="meals_header">Select your meal</string>
    <string name="meals_label01">Calories for mm-dd-yyyy</string>
    <string name="meals_label02">Total:</string>
    <string name="meals_label03">Calories</string>
    <string name="meals_button01">Breakfast</string>
    <string name="meals_button02">Snack 1</string>
    <string name="meals_button03">Lunch</string>
    <string name="meals_button04">Snack 2</string>
    <string name="meals_button05">Dinner</string>
    <string name="meals_button06">Snack 3</string>
    <string name="meals_button07">Select Another Day</string>


    <string name="trend_header">Calorie Trends</string>
    <string name="trend_placeholder">Someday there will be a chart here.</string>


    <string name="profile_header">User Profile</string>
    <string name="profile_label01">Height (in)</string>
    <string name="profile_label02">Weight (lbs)</string>
    <string name="profile_label03">Age</string>
    <string name="profile_label04">BMI</string>
    <string name="profile_label05">CALORIE GOALS</string>
    <string name="profile_label06">Daily</string>
    <string name="profile_label07">Weekly</string>
    <string name="profile_label08">Name</string>
    <string name="profile_label09">CURRENT CALORIES</string>
    <string name="profile_button01">Update</string>

</resources>