<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acMeals">

    <TextView
        android:id="@+id/showDate"
        android:layout_width="294dp"
        android:layout_height="39dp"
        android:layout_marginTop="63dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBreakfast"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="17dp"
        android:text="@string/meals_button01"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnSnack1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDate" />

    <Button
        android:id="@+id/btnLunch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/meals_button03"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnSnack2"
        app:layout_constraintStart_toStartOf="@+id/btnSnack1" />

    <Button
        android:id="@+id/btnSnack2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/meals_button04"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnDinner"
        app:layout_constraintStart_toStartOf="@+id/btnLunch" />

    <Button
        android:id="@+id/btnDinner"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/meals_button05"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnSnack3"
        app:layout_constraintStart_toStartOf="@+id/btnSnack2" />

    <Button
        android:id="@+id/btnSnack3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/meals_button06"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/btnDinner"
        tools:layout_editor_absoluteY="453dp" />

    <Button
        android:id="@+id/btnSnack1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/meals_button02"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnLunch"
        app:layout_constraintStart_toStartOf="@+id/btnBreakfast" />

    <TextView
        android:id="@+id/showBreakfastCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/showMorningSnackCalories"
        app:layout_constraintTop_toBottomOf="@+id/showDate"
        tools:layout_editor_absoluteX="314dp" />

    <TextView
        android:id="@+id/showMorningSnackCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/showLunchCalories"
        app:layout_constraintEnd_toEndOf="@+id/showBreakfastCalories" />

    <TextView
        android:id="@+id/showAfternoonSnackCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/showDinnerCalories"
        tools:layout_editor_absoluteY="453dp" />

    <TextView
        android:id="@+id/showDinnerCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/showAfternoonSnackCalories"
        app:layout_constraintEnd_toEndOf="@+id/showEveningSnackCalories" />

    <TextView
        android:id="@+id/showEveningSnackCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/showDinnerCalories"
        app:layout_constraintEnd_toEndOf="@+id/showLunchCalories" />

    <TextView
        android:id="@+id/showLunchCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/showEveningSnackCalories"
        app:layout_constraintEnd_toEndOf="@+id/showMorningSnackCalories" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="17dp"
        android:text="Total:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/btnSnack3"
        tools:layout_editor_absoluteX="142dp" />

    <TextView
        android:id="@+id/showTotalCalories"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="17dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/showAfternoonSnackCalories"
        app:layout_constraintTop_toBottomOf="@+id/showAfternoonSnackCalories" />

    <Button
        android:id="@+id/btnSetDay"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:onClick="getAnotherDay"
        android:text="@string/meals_button07"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>